# LarkClone

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  bazel-LarkClone  bazel-bin  bazel-out  bazel-testlogs  build.sh  setup.sh
.github/workflows/: genapp.yml
LarkClone/: AppDelegate.swift  BUILD  BUILD.bazel  Info.bazel.plist  Info.plist  SceneDelegate.swift  ViewController.swift
LarkClone.xcodeproj/: project.pbxproj
LarkClone/Frameworks/Core/Controllers/: MainTabBarController.swift
LarkClone/Frameworks/Core/Controllers/LarkFoundation/: LarkFoundation.swift
LarkClone/Frameworks/Core/LarkBridgeModels/: BUILD  ObjCMailItemList.h  ObjCMailItemList.swift
LarkClone/Frameworks/Core/LarkFoundation/Controllers/: MainTabBarController.swift
LarkClone/Frameworks/Core/LarkSDK/: BUILD  LarkSDK-Bridging-Header.h  LarkSDK.swift  RustBridge.swift  RustBridgeSymbolRetainer.swift  module.modulemap  module1.modulemap
LarkClone/Frameworks/Core/LarkSDKPB/: BUILD  ContactList.pb.swift  MailList.pb.swift
LarkClone/Frameworks/Tabs/MailTab/Resources/Localization/en.lproj/: MailTab.strings
LarkClone/Frameworks/Tabs/MailTab/Resources/Localization/zh-Hans.lproj/: MailTab.strings
LarkClone/Frameworks/Tabs/MailTab/Sources/Controllers/: EmailDetailVC.h  EmailDetailVC.m  EmailDetailVC.swift  LarkClone-Bridging-Header.h  MailboxVC.h  MailboxVC.m  MailboxVC.swift
LarkClone/Frameworks/Tabs/MailTab/Sources/Models/: MailItem.h  MailItem.m  MailItem.swift
LarkClone/Frameworks/Tabs/MailTab/Sources/Scripts/: GenerateMails.swift
LarkClone/Frameworks/Tabs/MailTab/Sources/Views/: EmailCell.h  EmailCell.m  EmailCell.swift
LarkClone/Frameworks/Tabs/MessengerTab/Resources/Assets.xcassets/account-assist.imageset/: Contents.json
LarkClone/Frameworks/Tabs/MessengerTab/Resources/Assets.xcassets/cao-wenlong.imageset/: Contents.json
LarkClone/Frameworks/Tabs/MessengerTab/Resources/Assets.xcassets/contact-assist.imageset/: Contents.json
LarkClone/Frameworks/Tabs/MessengerTab/Resources/Assets.xcassets/doc-assist.imageset/: Contents.json
LarkClone/Frameworks/Tabs/MessengerTab/Resources/Assets.xcassets/jiang-yuan.imageset/: Contents.json
LarkClone/Frameworks/Tabs/MessengerTab/Resources/Assets.xcassets/li-jianhao.imageset/: Contents.json
LarkClone/Frameworks/Tabs/MessengerTab/Resources/Assets.xcassets/liang-weixi.imageset/: Contents.json
LarkClone/Frameworks/Tabs/MessengerTab/Resources/Assets.xcassets/meeting-assist.imageset/: Contents.json
LarkClone/Frameworks/Tabs/MessengerTab/Resources/Assets.xcassets/su-peng.imageset/: Contents.json
LarkClone/Frameworks/Tabs/MessengerTab/Resources/Assets.xcassets/wang-xun.imageset/: Contents.json
LarkClone/Frameworks/Tabs/MessengerTab/Resources/Assets.xcassets/xiao-kaiqin.imageset/: Contents.json
LarkClone/Frameworks/Tabs/MessengerTab/Resources/Assets.xcassets/yan-wenhua.imageset/: Contents.json
LarkClone/Frameworks/Tabs/MessengerTab/Resources/Assets.xcassets/zhang-jilong.imageset/: Contents.json
LarkClone/Frameworks/Tabs/MessengerTab/Resources/Localization/en.lproj/: Localizable.strings  MessengerTab.strings
LarkClone/Frameworks/Tabs/MessengerTab/Resources/Localization/zh-Hans.lproj/: MessengerTab.strings
LarkClone/Frameworks/Tabs/MessengerTab/Resources/MockData/: mock_contacts.plist
LarkClone/Frameworks/Tabs/MessengerTab/Sources/: MessengerTab.swift
LarkClone/Frameworks/Tabs/MessengerTab/Sources/Controllers/: ChatDetailViewController.swift  ContactDataManager.swift  ContactManager.swift
LarkClone/Frameworks/Tabs/MessengerTab/Sources/Extensions/: UINavigationController+StatusBar.swift  UIView+Ext.swift
LarkClone/Frameworks/Tabs/MessengerTab/Sources/Models/: Contact.swift  Message.swift
LarkClone/Frameworks/Tabs/MessengerTab/Sources/Scripts/: GenerateContacts.swift  GenerateScript.swift
LarkClone/Frameworks/Tabs/MessengerTab/Sources/Views/: ChatDetailView.swift  ContactCell.swift  ContactListVC.swift  MessageCell.swift
LarkClone/Frameworks/UI/Components/: BUILD  RelativeDateFormatter.h  RelativeDateFormatter.m  SearchBarView.h  SearchBarView.swift
LarkClone/Frameworks/UI/LarkAvatar/: AvatarUtility.swift  AvatarView.swift  BUILD
LarkClone/Frameworks/UI/LarkChatBubble/: BUILD  ChatBubbleView.swift
LarkClone/Frameworks/UI/LarkColor/: BUILD.bazel  LarkColor.swift  LarkColorObjC.h  LarkColorObjC.m
LarkClone/Frameworks/UI/LarkLaunchScreen/: BUILD  LaunchViewController.swift
LarkClone/Frameworks/UI/LarkSearchBar/: BUILD  SearchBarView.m
LarkCloneTests/: LarkCloneTests.swift
LarkCloneTests/MailTabTest/: BUILD  LarkCloneTests-Bridging-Header.h
LarkCloneTests/MailTabTest/Extensions/: MailItem+Testing.h  MailboxVC+Testing.h
LarkCloneTests/MailTabTest/GeneratorTests/: EmailDataGeneratorModel.swift  GenerateMailsTests.swift
LarkCloneTests/MailTabTest/MockObjects/: FileSystemMocks.swift  MockObjcMailItem.swift  MockRustBridge.swift
LarkCloneTests/MailTabTest/ModelTests/: MailItemTests.swift
LarkCloneTests/MailTabTest/UITests/: MailboxVCTests.swift
LarkCloneTests/MessengerTabTest/: BUILD
LarkCloneTests/MessengerTabTest/ControllerTests/: ChatDetailViewControllerTester.swift  ChatDetailViewControllerTests.swift
LarkCloneTests/MessengerTabTest/MockObjectsTests/: MockContact.swift  MockMessage.swift
LarkCloneTests/MessengerTabTest/ModelTest/: MessageTests.swift
LarkCloneTests/MessengerTabTest/TestUtilities/: PrivateAccessor.swift
LarkCloneTests/MessengerTabTest/ViewTests/: MessageCellTester.swift  MessageCellTests.swift
RustSDK/: BUILD.bazel  Cargo.toml  cbindgen.toml
RustSDK/include/: rust_sdk.h
RustSDK/src/: build.rs  lib.rs
RustSDK/src/lark_sdk/: async_handler.rs  data.rs  mod.rs  plist.rs  utils.rs
RustSDK/src/lark_sdk_pb/: ContactList.pb.swift  contact.proto  contact.rs  mail.proto  mail.rs  mod.rs
RustSDK/src/tests/: lark_sdk_pb_tests.rs  lark_sdk_tests.rs
scripts/: build_rust.sh  check_rust_built.sh  run_generate_contacts.sh  run_generate_mails.sh  setup_bazel.sh  setup_rust.sh
scripts/simctl/: run.sh  shutdown.sh
scripts/xcodebuild/: build.sh  clean.sh
(+2 files in other folders)
