load("@rules_ios//rules:framework.bzl", "apple_framework")

apple_framework(
    name = "LarkColor",
    module_name = "LarkColor",
    srcs = glob([
        "*.swift",
        "*.m",
    ]),
    objc_headers = ["LarkColorObjC.h"],
    deps = [],  # 可能依赖其他模块
    visibility = ["//visibility:public"],
)
