load("@build_bazel_rules_ios//rules:framework.bzl", "apple_framework")
load("@rules_cc//cc:objc_library.bzl", "objc_library")
objc_library(
    name = "LarkColorHeaders",
    hdrs = glob(["*.h"]),
    includes = ["."],  # 包含当前目录下的所有文件
    visibility = ["//visibility:public"],
)
apple_framework(
    name = "LarkColorObjc",
    module_name = "LarkColorObjc",
    srcs = glob([
        # "*.swift",
        "*.m",
        # "*.h",
    ]),
    includes = [
        ".",
    ],
    deps = [":LarkColorHeaders"],  # 可能依赖其他模块
    platforms = {"ios": "18.0"},  
    
    visibility = ["//visibility:public"],
)

apple_framework(
    name = "LarkColor",
    module_name = "LarkColor",
    srcs = glob([
        "*.swift",
    ]),
    platforms = {"ios": "18.0"},  
    
    visibility = ["//visibility:public"],
)